Update .gitignore to exclude server/.env

--- a/client/.gitignore
+++ b/client/.gitignore
@@ -11,6 +11,8 @@ node_modules
 dist
 dist-ssr
 *.local
+server/.env
+
 
 # Editor directories and files
 .vscode/*
@@ -23,5 +25,6 @@ dist-ssr
 *.sln
 *.sw?
 # *.env
-.env
+server/.env
+
 
