--- a/client/.gitignore
+++ b/client/.gitignore
@@ -12,7 +12,7 @@ dist
 dist-ssr
 *.local
 server/.env
-
+.env
 
 # Editor directories and files
 .vscode/*
@@ -24,7 +24,7 @@ server/.env
 *.njsproj
 *.sln
 *.sw?
-# *.env
+*.env
 server/.env
 
 
