--- a/client/package.json
+++ b/client/package.json
@@ -14,9 +14,11 @@
     "bootstrap": "^5.3.2",
     "dompurify": "^3.0.8",
     "quill": "^1.3.7",
+    "quill-delta": "^5.1.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.2",
     "react-dom": "^18.2.0",
+    "react-html-parser": "^2.0.2",
     "react-icons": "^5.0.1",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.21.1",
