--- a/client/package.json
+++ b/client/package.json
@@ -10,9 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
+    "@mui/joy": "^5.0.0-beta.32",
+    "@mui/material": "^5.15.14",
     "aos": "^2.3.4",
     "bootstrap": "^5.3.2",
     "dompurify": "^3.0.8",
+    "history": "^5.3.0",
     "quill": "^1.3.7",
     "quill-delta": "^5.1.0",
     "react": "^18.2.0",
@@ -21,7 +26,7 @@
     "react-html-parser": "^2.0.2",
     "react-icons": "^5.0.1",
     "react-quill": "^2.0.0",
-    "react-router-dom": "^6.21.1",
+    "react-router-dom": "^6.22.3",
     "react-tagsinput": "^3.20.3",
     "react-toastify": "^9.1.3"
   },
