--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "react-icons": "^5.0.1",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.22.3",
+    "react-slideshow-image": "^4.3.1",
     "react-tagsinput": "^3.20.3",
     "react-toastify": "^9.1.3"
   },
