--- a/client/package.json
+++ b/client/package.json
@@ -16,12 +16,14 @@
     "@mui/material": "^5.15.14",
     "aos": "^2.3.4",
     "bootstrap": "^5.3.2",
+    "chart.js": "^4.4.2",
     "dompurify": "^3.0.8",
     "history": "^5.3.0",
     "quill": "^1.3.7",
     "quill-delta": "^5.1.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.2",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-html-parser": "^2.0.2",
     "react-icons": "^5.0.1",
