--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "aos": "^2.3.4",
     "bootstrap": "^5.3.2",
     "chart.js": "^4.4.2",
+    "date-fns": "^3.6.0",
     "dompurify": "^3.0.8",
     "history": "^5.3.0",
     "quill": "^1.3.7",
