--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-html-parser": "^2.0.2",
     "react-icons": "^5.0.1",
     "react-quill": "^2.0.0",
+    "react-responsive-masonry": "^2.2.0",
     "react-router-dom": "^6.22.3",
     "react-slideshow-image": "^4.3.1",
     "react-tagsinput": "^3.20.3",
