--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "react-responsive-masonry": "^2.2.0",
     "react-router-dom": "^6.22.3",
     "react-slideshow-image": "^4.3.1",
-    "react-tagsinput": "^3.20.3",
+    "react-tag-input-component": "^2.0.2",
     "react-toastify": "^9.1.3"
   },
   "devDependencies": {
