--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
     "@mantine/core": "^7.7.1",
+    "@mantine/hooks": "^7.7.1",
     "@mui/joy": "^5.0.0-beta.32",
     "@mui/material": "^5.15.14",
     "aos": "^2.3.4",
